--- a/todo2.html
+++ b/todo2.html
@@ -1,5 +1,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script  src="http://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"><></script>
     <script src="https://cdn.jsdelivr.net/npm/gun/lib/unset.js"></script>
     <script>
       var gun = Gun("ws://127.0.0.1:8000/gun")
