--- a/todo4.html
+++ b/todo4.html
@@ -1,5 +1,5 @@
 <script src="https://cdn.jsdelivr.net/npm/gun/gun.js"></script>
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script  src="http://code.jquery.com/jquery-3.5.1.min.js"
 <script src="https://cdn.jsdelivr.net/npm/gun/lib/unset.js"></script>
 <script>
 
